# BitBoyLab_v2

./: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  package.json  pyproject.toml  requirements.txt  test_font_glyphs.py  vercel.json
api/: main.py  models.py
api/routes/: process.py
community/: supa_glitch.json
core/: __init__.py  blend.py  engine.py
core/effects/: glitch.py  pixel_sort.py  posterize.py  texture.py  threshold.py
docs/: architecture.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/community/: nice_blocks.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/controls/: Controls.module.css  Controls.tsx  LayerPanel.module.css  LayerPanel.tsx
frontend/src/components/layout/: Canvas.module.css  Canvas.tsx  CommunityTab.module.css  CommunityTab.tsx  LeftToolbar.tsx  (+3 more)
frontend/src/lib/: api.ts  blend.ts  color.ts  engine.ts  mask.ts  schemas.ts
frontend/src/types/: index.ts
legacy-python/: dev.sh  pyproject.toml
legacy-python/api/routes/: effects.py
legacy-python/core/: mask.py
legacy-python/core/effects/: __init__.py  ascii_art.py  block_glitch.py  crt.py  dither.py  edge_detect.py  gradient_map.py  halftone.py  levels.py  noise.py  tileset_dither.py
legacy-python/docs/: api.md  effects.md
legacy-python/scripts/: cli.py  debug_ascii.py  repro_api_500.py
legacy-python/utils/: color.py
scripts/: benchmark_engine.py  repro_500.py  test_blending.py  test_engine.py  verify_tileset_fixes.py
utils/: __init__.py  image.py
(+18 files in other folders)
